# claude-skill-arc-cache

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIOR_ART.md  README.md  install.sh  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
commands/: arc-example.md.template
examples/: aliases.json.example  arc-bootstrap-demo-head.txt  arc-bootstrap-demo-summary.txt  auto-trigger-sample-output.json  cache-stats-line-sample.json  example-arc.conf  rollup-all-sample.txt
hooks/: hooks.json
hooks/scripts/: arc-auto-trigger.py  arc-bootstrap.sh  cache-stats-extractor.py
scripts/: build-arc-commands.sh  cache-rollup.sh
skills/arc-cache/: SKILL.md
skills/arc-cache/references/: pattern.md
tests/: conftest.py  test_arc_bootstrap.py  test_extractor.py
tests/fixtures/: example.conf
